--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     top: 110%;
     width: 100%;
     height: 100%;
-    background-image: url("./utils/uwp4625423.jpeg");
+    background-image: url("./uwp4625423.jpeg");
 }
 
 .S2Container {
